# dotfiles

./: .gitignore  .gitmodules  .stowrc  AGENTS.md  Brewfile  CLAUDE.md  README.md  bootstrap.sh  install  install.sh  ocx.jsonc  opencode.jsonc  push.sh  setup-shells.sh  setup.sh  takopi-launchd.sh  ubuntu
.beads/: .gitignore  metadata.json
.opencode/: package.json
aerospace/: aerospace.toml  ghostty-workspace-balance.sh  startup-workspace-sweep.sh  workspace-next.sh  workspace-prev.sh  workspace-reset.sh
alacritty/: alacritty.yml
atuin/: config.toml
bettermouse/: bettermouse_config.json  bettermouse_config.py
borders/: bordersrc
chrome/: com.google.Chrome.plist
docs/: .APPS-SETUP.md.swp  AEROSPACE-GUIDE.md  APPS-SETUP.md  DOTFILES-COMPLETE.md  OPENCODE-COMPLETION-WORKFLOW.md  QUICK-SETUP.md  TAKOPI.md
gf/: api-keys.json  js-sinks.json  php-sinks.json  truffle.json  urls.json
ghostty/: config  ps.json
go-blocksite/: config.yml
hammerspoon/: README.md  init.lua
homebrew/: Brewfile  casks.txt  formula.txt  leaves.txt  list.txt
k9s/: config.yml
karabiner/: karabiner.json
kindavim/: mo.com.sleeplessmind.kindaVim.plist
kitty/: kitty.conf
launchagents/: com.klaudioz.cmatrix-wallpaper.plist  com.klaudioz.launchctl-limits.plist  com.klaudioz.mcp-agent-mail.plist  com.klaudioz.openportal-dashboard.plist  com.klaudioz.openportal.plist  com.klaudioz.takopi.plist
nix-darwin/: .stow-local-ignore  flake.nix  home.nix
takopi-plugins/takopi-dotfiles/: README.md  pyproject.toml
takopi-plugins/takopi-dotfiles/takopi_dotfiles/: finish.py  o.py
(+204 files in other folders)
